Fix upload preview text spacing

--- a/src/ui/views/main/components/channel/input/upload.scss
+++ b/src/ui/views/main/components/channel/input/upload.scss
@@ -119,6 +119,7 @@
         max-width: 100%;
         height: 1.5em;
         line-height: 1;
+        flex-shrink: 0;
 
         margin-block-start: 0.5em;
         margin-block-end: 0.25em;
